--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -25,8 +25,8 @@ requirements:
   run:
     - python >=3.8
     - numpy >=1.14.3
-    - dpdata >=0.1.10
-    - pymatgen >=2019.1.13,<=2022.7.19
+    - dpdata >=0.2.6,!=0.2.11
+    - pymatgen >=2022.7.19
     - ase
     - monty >2.0.0
     - paramiko
